--- a/app/views/admin/donations/show.html.erb
+++ b/app/views/admin/donations/show.html.erb
@@ -49,7 +49,7 @@
       <dl class="space-y-4">
         <div class="flex justify-between">
           <dt class="text-sm text-gray-500 dark:text-gray-400">Status</dt>
-          <dd><%= status_badge(@donation.payment_status) %></dd>
+          <dd><%= status_badge(@donation.payment_status, :payment) %></dd>
         </div>
         <div class="flex justify-between">
           <dt class="text-sm text-gray-500 dark:text-gray-400">Ilość pakietów</dt>
@@ -136,7 +136,7 @@
         <dl class="space-y-3">
           <div class="flex justify-between">
             <dt class="text-sm text-gray-500 dark:text-gray-400">Status</dt>
-            <dd><%= status_badge(@donation.shipment.status) %></dd>
+            <dd><%= status_badge(@donation.shipment.status, :shipment) %></dd>
           </div>
           <% if @donation.shipment.waybill_number.present? %>
             <div class="flex justify-between">
