--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -60,7 +60,7 @@
                 <p class="text-sm text-gray-900 dark:text-white"><%= order.locker_code %></p>
                 <p class="text-xs text-gray-500 dark:text-gray-400"><%= order.locker_city %></p>
               </td>
-              <td class="px-6 py-4"><%= status_badge(order.status) %></td>
+              <td class="px-6 py-4"><%= status_badge(order.status, :order) %></td>
               <td class="px-6 py-4 text-sm text-gray-500 dark:text-gray-400">
                 <%= order.created_at.strftime("%d.%m.%Y") %><br>
                 <%= order.created_at.strftime("%H:%M:%S") %>
