--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -41,7 +41,7 @@
       <dl class="space-y-4">
         <div class="flex justify-between">
           <dt class="text-sm text-gray-500 dark:text-gray-400">Status</dt>
-          <dd><%= status_badge(@order.status) %></dd>
+          <dd><%= status_badge(@order.status, :order) %></dd>
         </div>
         <div class="flex justify-between">
           <dt class="text-sm text-gray-500 dark:text-gray-400">Ilość</dt>
@@ -107,7 +107,7 @@
         <dl class="space-y-2">
           <div class="flex justify-between">
             <dt class="text-sm text-gray-500 dark:text-gray-400">Status</dt>
-            <dd><%= status_badge(@order.shipment.status) %></dd>
+            <dd><%= status_badge(@order.shipment.status, :shipment) %></dd>
           </div>
           <% if @order.shipment.waybill_number.present? %>
             <div class="flex justify-between">
