--- a/app/views/admin/settlements/show.html.erb
+++ b/app/views/admin/settlements/show.html.erb
@@ -186,7 +186,7 @@
             <tr class="hover:bg-gray-50 dark:hover:bg-gray-700/50">
               <td class="px-6 py-3 text-sm font-medium text-gray-900 dark:text-white">#<%= order.id %></td>
               <td class="px-6 py-3 text-center text-sm text-gray-900 dark:text-white"><%= order.quantity %></td>
-              <td class="px-6 py-3"><%= status_badge(order.status) %></td>
+              <td class="px-6 py-3"><%= status_badge(order.status, :order) %></td>
               <td class="px-6 py-3 text-sm text-gray-500 dark:text-gray-400"><%= order.created_at.strftime("%d.%m.%Y") %></td>
               <td class="px-6 py-3 text-right">
                 <%= link_to "Zobacz", admin_order_path(order), class: "text-brand-500 hover:text-brand-600 text-sm" %>
