--- a/app/views/admin/shipments/show.html.erb
+++ b/app/views/admin/shipments/show.html.erb
@@ -39,7 +39,7 @@
       <dl class="space-y-4">
         <div class="flex justify-between">
           <dt class="text-sm text-gray-500 dark:text-gray-400">Status</dt>
-          <dd><%= status_badge(@shipment.status) %></dd>
+          <dd><%= status_badge(@shipment.status, :shipment) %></dd>
         </div>
         <% if @shipment.apaczka_order_id.present? %>
           <div class="flex justify-between">
@@ -92,7 +92,7 @@
           </div>
           <div class="flex items-center justify-between">
             <span class="text-sm text-gray-500 dark:text-gray-400">Status zamówienia</span>
-            <span><%= status_badge(@shipment.order.status) %></span>
+            <span><%= status_badge(@shipment.order.status, :order) %></span>
           </div>
         </div>
       <% elsif @shipment.donation.present? %>
@@ -119,7 +119,7 @@
           </div>
           <div class="flex items-center justify-between">
             <span class="text-sm text-gray-500 dark:text-gray-400">Status płatności</span>
-            <span><%= status_badge(@shipment.donation.payment_status) %></span>
+            <span><%= status_badge(@shipment.donation.payment_status, :payment) %></span>
           </div>
         </div>
       <% end %>
