--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -82,7 +82,7 @@
               <tr class="hover:bg-gray-50 dark:hover:bg-gray-700/50">
                 <td class="px-6 py-4 text-sm text-gray-900 dark:text-white"><%= order.edition.name %></td>
                 <td class="px-6 py-4 text-sm text-gray-900 dark:text-white"><%= order.quantity %></td>
-                <td class="px-6 py-4"><%= status_badge(order.status) %></td>
+                <td class="px-6 py-4"><%= status_badge(order.status, :order) %></td>
                 <td class="px-6 py-4 text-sm text-gray-500 dark:text-gray-400"><%= order.created_at.strftime("%d.%m.%Y") %></td>
               </tr>
             <% end %>
