--- a/app/views/leader/dashboard/index.html.erb
+++ b/app/views/leader/dashboard/index.html.erb
@@ -248,7 +248,7 @@
                   <div class="text-xs text-gray-500 dark:text-gray-400">+ <%= order.poster_quantity %> plakatów</div>
                 <% end %>
               </td>
-              <td class="px-6 py-4"><%= status_badge(order.status) %></td>
+              <td class="px-6 py-4"><%= status_badge(order.status, :order) %></td>
               <td class="px-6 py-4 text-sm text-gray-500 dark:text-gray-400"><%= order.created_at.strftime("%d.%m.%Y") %></td>
               <td class="px-6 py-4 text-right">
                 <%= link_to "Zobacz", leader_order_path(order), class: "text-brand-500 hover:text-brand-600 text-sm" %>
