--- a/app/views/leader/orders/show.html.erb
+++ b/app/views/leader/orders/show.html.erb
@@ -44,7 +44,7 @@
       <dl class="space-y-4">
         <div class="flex justify-between">
           <dt class="text-sm text-gray-500 dark:text-gray-400">Status</dt>
-          <dd><%= status_badge(@order.status) %></dd>
+          <dd><%= status_badge(@order.status, :order) %></dd>
         </div>
         <div class="flex justify-between">
           <dt class="text-sm text-gray-500 dark:text-gray-400">Ilość pakietów</dt>
@@ -106,7 +106,7 @@
         <dl class="space-y-3">
           <div class="flex justify-between">
             <dt class="text-sm text-gray-500 dark:text-gray-400">Status</dt>
-            <dd><%= status_badge(@order.shipment.status) %></dd>
+            <dd><%= status_badge(@order.shipment.status, :shipment) %></dd>
           </div>
           <% if @order.shipment.waybill_number.present? %>
             <div class="flex justify-between">
